# zebras-launcher

./: .gitignore  AGENTS.md  FEATURE_ROADMAP.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
docs/: multi-terminal-git-status-plan.md
src/: App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: debug.rs  git.rs  managed_project.rs  mod.rs  port.rs  process.rs  project.rs  terminal.rs  workspace.rs
src-tauri/src/models/: git_status.rs  managed_project.rs  mod.rs  process_info.rs  project.rs  terminal.rs  workspace.rs
src-tauri/src/services/: config_parser.rs  git_manager.rs  managed_project_service.rs  mod.rs  port_manager.rs  process_manager.rs  project_scanner.rs  terminal_manager.rs  workspace_list.rs  workspace_service.rs
src-tauri/src/utils/: mod.rs  port_checker.rs  process_killer.rs  ts_parser.rs  user_path.rs
src/components/project/: ProjectCard.tsx  TerminalPanel.tsx
src/components/settings/: SettingsPanel.tsx
src/components/workspace/: DependencyGraphModal.tsx  ProjectGrid.tsx  WorkspaceManager.tsx
src/hooks/: useAppSettings.ts  useGitStatus.ts  useWorkspace.ts
src/services/: tauri.ts
src/styles/: index.css
src/types/: git.ts  index.ts  log.ts  managed_project.ts  process.ts  project.ts  settings.ts  terminal.ts  workspace.ts  workspace_ref.ts
