[package]
name = "zebras-launcher"
version = "0.1.0"
description = "Tauri-based launcher for Zebras projects"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog-all", "fs-all", "path-all", "process-exit", "process-relaunch"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
regex = "1.10"
thiserror = "1.0"
dirs-next = "2.0"
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
